Fix find team section mobile layout & content

--- a/src/components/sections/team.scss
+++ b/src/components/sections/team.scss
@@ -12,7 +12,20 @@
   }
   &__subheading {
   }
-  &__button {
+
+  &__controls {
+    display: flex;
+    flex-wrap: wrap;
     margin-top: 4rem;
+  }
+  &__button {
+    @include viewportSmallerThan($breakpoint-s) {
+      flex-grow: 1;
+      flex-shrink: 0;
+      flex-basis: auto;
+      text-align: center;
+    }
+
+    margin-bottom: 1rem;
   }
 }
